--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>SoujiJavaUtils</groupId>
     <artifactId>SoujiJavaUtils</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
